# rfkillmon

./: CMakeLists.txt  README.md  rfmon.py
debian/: changelog  control  copyright  rules
service/: CMakeLists.txt  foo.rfkill.service  main.cpp  nbfile.cpp  nbfile.h  rfdevice.cpp  rfdevice.h  rfservice.cpp  rfservice.h
src/: CMakeLists.txt  dbus.cpp  foo.rfkill.xml  icons.qrc  main.cpp  rfeventsource.cpp  rfeventsource.h  rfkilltray.desktop  rftray.cpp  rftray.h  src.pro  tray.cpp  tray.h
